# ps2logo

./: .gitignore  .hgignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README  README.md  index.html  params.json  ps2logo.c  ps2logo.go  ps2logo_test.go
Documentation/: PS2_Disc_Security_explanations.htm  howto.txt
alt/: .gitignore  Cargo.toml  Makefile  README  ps2logo.c  ps2logo.rs
doc/: PS2 Disc Security explanations.htm  ps2boot.txt
script/: test
src/: CMakeLists.txt  ps2logo.c
