[package]
name = "ps2logo"
version = "1.0.0"
description = "PS2 Logo Decryptor"
authors = ["Mathias Lafeldt <mathias.lafeldt@gmail.com>"]
license = "MIT"
repository = "https://github.com/mlafeldt/ps2logo"
documentation = "https://github.com/mlafeldt/ps2logo"
edition = "2018"
include = ["ps2logo.rs"]

[[bin]]
name = "ps2logo"
path = "ps2logo.rs"
